#Container sizing: 3. Set the <h1> and the <div> with a class of controls to both be 100px high. Set the <div> with a class of content to be 100% of the <body> height, minus the height of the <h1> and the <div class="controls">. This should give you a UI that always stretches to be the height of the viewport, with a flexible content container and a fixed height heading and button bar.

--- a/size-decorate-content-panel/style.css
+++ b/size-decorate-content-panel/style.css
@@ -48,9 +48,11 @@ h1,
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100px;
 }
 
 .content {
+    height: calc(100vh - 160px);
 }
 
 .controls {
